@@ -110,7 +110,7 @@ sub new
 {
   state $default_handler = sub { };
   my $class = shift;
-  my $args = reftype($_[0]) eq 'HASH' ? shift : { @_ };
+  my $args = (reftype($_[0]) // '') eq 'HASH' ? shift : { @_ };
   my %self;
   $self{$_} = $args->{$_} // $default_handler for qw( on_stdout on_stderr on_start on_exit on_signal on_fail on_error );
   bless \%self, $class;
